welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:25: error: not found: value faireV
    	faireV()
        ^