welcome.lessons.welcome.methods.picture.PictureMono3.scala.code
override def run() {
}
def dessinTout(){
  	for (colonne <-1 to 9){
    	ligneMotif()
    	monterColonne()
  	}
	}
	def monterColonne(){
  	ligneMotif()
  	recule(56)
  	gauche()
  	avance(7)
  	droite()
	}
	def ligneMotif(){
  	for (plop <-1 to 8){
  	faireMotif()
  	avance(7)}
	}

	def faireMotif(){
  	for (cote <-1 to 4){
    	avance(2)
    	faireV()
    	avance(2)
    	gauche()
  	}
	}


	def marquerSol(){
  	baisseBrosse()
  	leveBrosse()
	}
